refactor: remove keyboard navigation feature
- Remove keyboard-nav demo from both Avalonia and Blazor
- Remove OnKeyDown handler and related methods from NavigationView
- Simplify NavigationView component (click-only interaction)

--- a/src/Modulus.UI.Avalonia/Components/NavigationView.axaml
+++ b/src/Modulus.UI.Avalonia/Components/NavigationView.axaml
@@ -7,9 +7,7 @@
              mc:Ignorable="d" d:DesignWidth="220" d:DesignHeight="300"
              x:Class="Modulus.UI.Avalonia.Components.NavigationView"
              x:DataType="local:NavigationView"
-             x:Name="Root"
-             Focusable="True"
-             KeyDown="OnKeyDown">
+             x:Name="Root">
     
     <UserControl.Styles>
         <!-- Override padding when collapsed -->
